# auxsqlgeneratortask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  server.py  transform_data.py
