[tool.poetry]
name = "auxsqlgeneratortask"
version = "0.1.0"
description = ""
authors = ["Arkadius Schuchhardt <schuchhardt@auxmoney.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
psycopg = {extras = ["binary"], version = "^3.1.17"}
faker = "^22.2.0"
pytz = "^2023.3.post1"
httpx = "^0.26.0"
fastavro = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
